--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ android {
             testCoverageEnabled = true
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 unMock {
