fix regex fault in UserAgentInterceptor and update its test

--- a/build.gradle
+++ b/build.gradle
@@ -109,4 +109,5 @@ dependencies {
         exclude module: 'hamcrest-core'
     }
     testCompile testDependencies.mockito
+    testCompile testDependencies.mockWebServer
 }
